refector: apply code style